{
  "version": 4,
  "terraform_version": "1.0.7",
  "serial": 383,
  "lineage": "1603284c-712c-6e7e-edd7-f00aa0a5f33d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-12a1b712",
            "domain": "vpc",
            "id": "eipalloc-12a1b712",
            "network_border_group": "sa-east-1",
            "public_dns": "ec2-18-229-129-170.sa-east-1.compute.amazonaws.com",
            "public_ip": "18.229.129.170",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "prod-elastic-ip-crt"
            },
            "tags_all": {
              "Name": "prod-elastic-ip-crt"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "P03-Emissor1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e66f5495b4efdd0f",
            "arn": "arn:aws:ec2:sa-east-1:718542411817:instance/i-02613d7e49eda6a09",
            "associate_public_ip_address": true,
            "availability_zone": "sa-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02613d7e49eda6a09",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key01",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0592f8f3608591a5f",
            "private_dns": "ip-172-25-0-29.sa-east-1.compute.internal",
            "private_ip": "172.25.0.29",
            "public_dns": "ec2-54-207-162-55.sa-east-1.compute.amazonaws.com",
            "public_ip": "54.207.162.55",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0324c2b5533c421db",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09632cfd3c168d9f1",
            "tags": {
              "Name": "P03-Emissor"
            },
            "tags_all": {
              "Name": "P03-Emissor"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d80cf408c8ea7216"
            ]
          },
          "dependencies": [
            "aws_security_group.acesso-remoto",
            "aws_subnet.subnet-emissor",
            "aws_vpc.vpc-emissor"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "emissor-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:718542411817:internet-gateway/igw-0f0e0ccf9a89d6a6d",
            "id": "igw-0f0e0ccf9a89d6a6d",
            "owner_id": "718542411817",
            "tags": {
              "Name": "emissor-igw"
            },
            "tags_all": {
              "Name": "emissor-igw"
            },
            "vpc_id": "vpc-08f70ec88188c2005"
          },
          "dependencies": [
            "aws_vpc.vpc-emissor"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "IN8-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a8c6e1e2be264736",
            "original_route_table_id": "rtb-0c8dc0fdc9a79613f",
            "route_table_id": "rtb-064f816f2ea1fafbf",
            "vpc_id": "vpc-08f70ec88188c2005"
          },
          "dependencies": [
            "aws_internet_gateway.emissor-igw",
            "aws_route_table.prod-public-crt",
            "aws_vpc.vpc-emissor"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-12a1b712",
            "connectivity_type": "public",
            "id": "nat-087a2ce6f722492a5",
            "network_interface_id": "eni-0d55bab667af3abda",
            "private_ip": "172.25.0.24",
            "public_ip": "18.229.129.170",
            "subnet_id": "subnet-09632cfd3c168d9f1",
            "tags": {
              "Name": "prod-nat-gateway-crt"
            },
            "tags_all": {
              "Name": "prod-nat-gateway-crt"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.emissor-igw",
            "aws_subnet.subnet-emissor",
            "aws_vpc.vpc-emissor"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prod-public-crt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:718542411817:route-table/rtb-064f816f2ea1fafbf",
            "id": "rtb-064f816f2ea1fafbf",
            "owner_id": "718542411817",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f0e0ccf9a89d6a6d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08f70ec88188c2005"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.emissor-igw",
            "aws_vpc.vpc-emissor"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "acesso-remoto",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:718542411817:security-group/sg-0d80cf408c8ea7216",
            "description": "Allow webservers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d80cf408c8ea7216",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "acesso-remoto",
            "name_prefix": "",
            "owner_id": "718542411817",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08f70ec88188c2005"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc-emissor"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-emissor",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:718542411817:subnet/subnet-09632cfd3c168d9f1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1a",
            "availability_zone_id": "sae1-az1",
            "cidr_block": "172.25.0.0/24",
            "id": "subnet-09632cfd3c168d9f1",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "718542411817",
            "tags": {
              "Name": "subnet-emissor"
            },
            "tags_all": {
              "Name": "subnet-emissor"
            },
            "vpc_id": "vpc-08f70ec88188c2005"
          },
          "dependencies": [
            "aws_vpc.vpc-emissor"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-emissor",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:718542411817:vpc/vpc-08f70ec88188c2005",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.25.0.0/16",
            "default_network_acl_id": "acl-0c15d22c01c4cef74",
            "default_route_table_id": "rtb-0c8dc0fdc9a79613f",
            "default_security_group_id": "sg-0039a8e1671979b94",
            "dhcp_options_id": "dopt-73752f14",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-08f70ec88188c2005",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0c8dc0fdc9a79613f",
            "owner_id": "718542411817",
            "tags": {
              "Name": "vpc-teste"
            },
            "tags_all": {
              "Name": "vpc-teste"
            }
          }
        }
      ]
    }
  ]
}